# test_django_dropzone

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
django_dropzone/: apps.py  models.py  settings.py  urls.py  views.py
django_dropzone/migrations/: 0001_initial.py
django_dropzone/templates/django_dropzone/: dropzone_css.html  dropzone_js.html  form_with_files.html  simple_form.html
django_dropzone/templatetags/: dropzone_tags.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20210330_1707.py
main/templates/main/: base.html  detail.html  list.html
test_django_dropzone/: dropzone_settings.py  settings.py  urls.py  wsgi.py
